--- a/home/templates/home/portafolio.html
+++ b/home/templates/home/portafolio.html
@@ -5,8 +5,14 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, maximum-scale=1">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700,300' rel='stylesheet' type='text/css'>
+        <!--  uncomment when using with django
         <link rel="stylesheet" href="../static/home/css/normalize.css">
         <link rel="stylesheet" href="../static/home/css/estilos.css">
+        -->
+        <!--  needed for gh-pages  -->
+        <link rel="stylesheet" href="../../static/home/css/normalize.css">
+        <link rel="stylesheet" href="../../static/home/css/estilos.css">
+        <!--  end needed for gh-pages  -->
     </head>
     <body>
         <header id="yo" class="Header">
@@ -29,7 +35,12 @@
                 </ul>
             </nav>
             <figure class="Header-imageContainer">
+                <!--  uncomment when using with django
                 <img src="../static/home/images/Iop.jpg" alt="Imagen personal" class="Header-image" width="200" height="200"/>
+                -->
+                <!--  needed for gh-pages  -->
+                <img src="../../static/home/images/Iop.jpg" alt="Imagen personal" class="Header-image" width="200" height="200"/>
+                <!--  end needed for gh-pages  -->
                 <figcaption class="Header-imageDescription">
                     <a class="Header-link" href="http://twitter.com/DashFxV1/" target="_black">@DashFxV1</a>
                 </figcaption>
@@ -50,9 +61,16 @@
         <section class="Slider">
             <div class="Slider-container">
                 <ul class="rslides">
+                  <!--  uncomment when using with django
                   <li><img src="../static/home/images/sabreTeamArg.jpg" alt="Equipo Sabre Buenos Aires" title="Equipo Sabre Buenos Aires" width="1024" height="400"></li>
                   <li><img src="../static/home/images/LAN Ecuador 1.jpg" alt="LAN Ecuador" title="LAN Ecuador" width="1024" height="400"></li>
                   <li><img src="../static/home/images/kartings.jpg" alt="Kartings en Buenos Aires" title="Kartings" width="1024" height="400"></li>
+                  -->
+                  <!--  needed for gh-pages  -->
+                  <li><img src="../../static/home/images/sabreTeamArg.jpg" alt="Equipo Sabre Buenos Aires" title="Equipo Sabre Buenos Aires" width="1024" height="400"></li>
+                  <li><img src="../../static/home/images/LAN Ecuador 1.jpg" alt="LAN Ecuador" title="LAN Ecuador" width="1024" height="400"></li>
+                  <li><img src="../../static/home/images/kartings.jpg" alt="Kartings en Buenos Aires" title="Kartings" width="1024" height="400"></li>
+                  <!--  end needed for gh-pages  -->
                 </ul>
             </div>
         </section>
@@ -63,43 +81,79 @@
             <div class="Work-container u-containerDefault">
                 <article class="Work-item">
                     <figure class="Work-imageContainer">
+                        <!--  uncomment when using with django
                         <img class="Work-image" src="../static/home/images/sabre_arg1.jpg" alt="Es la descripcion de mi imagen"
                              width="245" height="245">
+                        -->
+                        <!--  needed for gh-pages  -->
+                        <img class="Work-image" src="../../static/home/images/sabre_arg1.jpg" alt="Es la descripcion de mi imagen"
+                             width="245" height="245">
+                        <!--  end needed for gh-pages  -->
                         <figcaption class="Work-description">Sabre Buenos Aires workplace</figcaption>
                     </figure>
                 </article>
                 <article class="Work-item">
                     <figure class="Work-imageContainer">
+                        <!--  uncomment when using with django
                         <img class="Work-image" src="../static/home/images/sabre_arg2.jpg" alt="Es la descripcion de mi imagen"
                         width="245" height="245">
+                        -->
+                        <!--  needed for gh-pages  -->
+                        <img class="Work-image" src="../../static/home/images/sabre_arg2.jpg" alt="Es la descripcion de mi imagen"
+                        width="245" height="245">
+                        <!--  end needed for gh-pages  -->
                         <figcaption class="Work-description">Sabre Buenos Aires workplace</figcaption>
                     </figure>
                 </article>
                 <article class="Work-item">
                     <figure class="Work-imageContainer">
+                        <!--  uncomment when using with django
                         <img class="Work-image" src="../static/home/images/SouthLake.jpg" alt="Es la descripcion de mi imagen"
                         width="245" height="245">
+                        -->
+                        <!--  needed for gh-pages  -->
+                        <img class="Work-image" src="../../static/home/images/SouthLake.jpg" alt="Es la descripcion de mi imagen"
+                        width="245" height="245">
+                        <!--  end needed for gh-pages  -->
                         <figcaption class="Work-description">Sabre Southlake workplace</figcaption>
                     </figure>
                 </article>
                 <article class="Work-item">
                     <figure class="Work-imageContainer">
+                        <!--  uncomment when using with django
                         <img class="Work-image" src="../static/home/images/photo1.jpg" alt="Es la descripcion de mi imagen"
                         width="245" height="245">
+                        -->
+                        <!--  needed for gh-pages  -->
+                        <img class="Work-image" src="../../static/home/images/photo1.jpg" alt="Es la descripcion de mi imagen"
+                        width="245" height="245">
+                        <!--  end needed for gh-pages  -->
                         <figcaption class="Work-description">Southlake funny</figcaption>
                     </figure>
                 </article>
                 <article class="Work-item">
                     <figure class="Work-imageContainer">
+                        <!--  uncomment when using with django
                         <img class="Work-image" src="../static/home/images/airport.jpg" alt="Es la descripcion de mi imagen"
                         width="245" height="245">
+                        -->
+                        <!--  needed for gh-pages  -->
+                        <img class="Work-image" src="../../static/home/images/airport.jpg" alt="Es la descripcion de mi imagen"
+                        width="245" height="245">
+                        <!--  end needed for gh-pages  -->
                         <figcaption class="Work-description">Aeropuerto Dallas-Fortworth</figcaption>
                     </figure>
                 </article>
                 <article class="Work-item">
                     <figure class="Work-imageContainer">
+                        <!--  uncomment when using with django
                         <img class="Work-image" src="../static/home/images/kartings2.jpg" alt="Es la descripcion de mi imagen"
                         width="245" height="245">
+                        -->
+                        <!--  needed for gh-pages  -->
+                        <img class="Work-image" src="../../static/home/images/kartings2.jpg" alt="Es la descripcion de mi imagen"
+                        width="245" height="245">
+                        <!--  end needed for gh-pages  -->
                         <figcaption class="Work-description">Equipo FreeTimeSoftware</figcaption>
                     </figure>
                 </article>
@@ -118,9 +172,16 @@
             </form>
         </footer>
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <!--  uncomment when using with django
         <script src="../static/home/js/vendors/responsiveslides.min.js"></script>
         <script src="../static/home/js/vendors/retina.min.js"></script>
         <script src="../static/home/js/vendors/hammer.min.js"></script>
+        -->
+        <!--  needed for gh-pages  -->
+        <script src="../../static/home/js/vendors/responsiveslides.min.js"></script>
+        <script src="../../static/home/js/vendors/retina.min.js"></script>
+        <script src="../../static/home/js/vendors/hammer.min.js"></script>
+        <!--  end needed for gh-pages  -->
         <script>
           $(function() {
             $(".rslides").responsiveSlides();
